# silero_vad_rust

./: Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs
src/silero_vad/: mod.rs  model.rs  safetensors.rs  tensor.rs  utils_vad.rs
src/silero_vad/data/: mod.rs
tests/: test_basic.rs
tests/data/: expected_probs.json
