[package]
name = "silero_vad_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
symphonia = { version = "0.5.4", features = ["all"] }
hound = "3.5.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = "0.9.5"

# Optional dependencies for benchmarking against the ONNX Runtime baseline
ort = { version = "=2.0.0-rc.10", features = ["ndarray"], optional = true }
ndarray = { version = "0.16", optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = []
openblas = []
benchmark_ort = ["dep:ort", "dep:ndarray"]
